--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,8 +4,28 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-on-ubuntu-22-arm:
     runs-on: ubuntu-22.04-arm
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Cache cargo registry
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Build
+        run: cargo build --release --verbose --target aarch64-unknown-linux-gnu
+
+  build-on-ubuntu-24-arm:
+    runs-on: ubuntu-24.04-arm
     steps:
       - name: Checkout
         uses: actions/checkout@v4
