--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,26 @@ on:
   workflow_dispatch:
 
 jobs:
+  build-on-ubuntu-22-arm-normal:
+    runs-on: ubuntu-22.04-arm
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Cache cargo registry
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-ubuntu-22.04-arm-normal-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Build
+        run: cargo build --release --verbose --target aarch64-unknown-linux-gnu
+
   build-on-ubuntu-22-arm:
     runs-on: ubuntu-22.04-arm
     steps:
@@ -21,25 +41,83 @@ jobs:
             target/
           key: ${{ runner.os }}-ubuntu-22.04-arm-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Build
-        run: cargo build --release --verbose --target aarch64-unknown-linux-gnu
+      # https://github.com/denoland/deno/blob/a82326d029042aafc0e192b7593a02943ad829c3/.github/workflows/ci.generate.ts#L82
+      - name: Set up incremental LTO and sysroot build
+        run: |-
+          # Setting up sysroot
+          export DEBIAN_FRONTEND=noninteractive
+          # Avoid running man-db triggers, which sometimes takes several minutes
+          # to complete.
+          sudo apt-get -qq remove --purge -y man-db  > /dev/null 2> /dev/null
+          # Remove older clang before we install
+          sudo apt-get -qq remove   'clang-12*' 'clang-13*' 'clang-14*' 'clang-15*' 'clang-16*' 'clang-17*' 'clang-18*' 'llvm-12*' 'llvm-13*' 'llvm-14*' 'llvm-15*' 'llvm-16*' 'lld-12*' 'lld-13*' 'lld-14*' 'lld-15*' 'lld-16*' 'lld-17*' 'lld-18*' > /dev/null 2> /dev/null
 
-  build-on-ubuntu-24-arm:
-    runs-on: ubuntu-24.04-arm
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+          # Install clang-XXX, lld-XXX, and debootstrap.
+          echo "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-19 main" |
+            sudo dd of=/etc/apt/sources.list.d/llvm-toolchain-jammy-19.list
+          curl https://apt.llvm.org/llvm-snapshot.gpg.key |
+            gpg --dearmor                                 |
+          sudo dd of=/etc/apt/trusted.gpg.d/llvm-snapshot.gpg
+          sudo apt-get update
+          # this was unreliable sometimes, so try again if it fails
+          sudo apt-get install --no-install-recommends clang-19 lld-19 clang-tools-19 clang-format-19 clang-tidy-19 || echo 'Failed. Trying again.' && sudo apt-get clean && sudo apt-get update && sudo apt-get install --no-install-recommends clang-19 lld-19 clang-tools-19 clang-format-19 clang-tidy-19
+          # Fix alternatives
+          (yes '' | sudo update-alternatives --force --all) > /dev/null 2> /dev/null || true
 
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-ubuntu-24.04-arm-cargo-${{ hashFiles('**/Cargo.lock') }}
+          echo "Decompressing sysroot..."
+          wget -q https://github.com/denoland/deno_sysroot_build/releases/download/sysroot-20241030/sysroot-`uname -m`.tar.xz -O /tmp/sysroot.tar.xz
+          cd /
+          xzcat /tmp/sysroot.tar.xz | sudo tar -x
+          sudo mount --rbind /dev /sysroot/dev
+          sudo mount --rbind /sys /sysroot/sys
+          sudo mount --rbind /home /sysroot/home
+          sudo mount -t proc /proc /sysroot/proc
+          cd
+
+          echo "Done."
+
+          # Configure the build environment. Both Rust and Clang will produce
+          # llvm bitcode only, so we can use lld's incremental LTO support.
+
+          # Load the sysroot's env vars
+          echo "sysroot env:"
+          cat /sysroot/.env
+          . /sysroot/.env
+
+          # Important notes:
+          #   1. -ldl seems to be required to avoid a failure in FFI tests. This flag seems
+          #      to be in the Rust default flags in the smoketest, so uncertain why we need
+          #      to be explicit here.
+          #   2. RUSTFLAGS and RUSTDOCFLAGS must be specified, otherwise the doctests fail
+          #      to build because the object formats are not compatible.
+          echo "
+          CARGO_PROFILE_BENCH_INCREMENTAL=false
+          CARGO_PROFILE_RELEASE_INCREMENTAL=false
+          RUSTFLAGS<<__1
+            -C linker-plugin-lto=true
+            -C linker=clang-19
+            -C link-arg=-fuse-ld=lld-19
+            -C link-arg=-ldl
+            -C link-arg=-Wl,--allow-shlib-undefined
+            -C link-arg=-Wl,--thinlto-cache-dir=$(pwd)/target/release/lto-cache
+            -C link-arg=-Wl,--thinlto-cache-policy,cache_size_bytes=700m
+            --cfg tokio_unstable
+            $RUSTFLAGS
+          __1
+          RUSTDOCFLAGS<<__1
+            -C linker-plugin-lto=true
+            -C linker=clang-19
+            -C link-arg=-fuse-ld=lld-19
+            -C link-arg=-ldl
+            -C link-arg=-Wl,--allow-shlib-undefined
+            -C link-arg=-Wl,--thinlto-cache-dir=$(pwd)/target/release/lto-cache
+            -C link-arg=-Wl,--thinlto-cache-policy,cache_size_bytes=700m
+            --cfg tokio_unstable
+            $RUSTFLAGS
+          __1
+          CC=/usr/bin/clang-19
+          CFLAGS=$CFLAGS
+          " > $GITHUB_ENV
 
       - name: Build
         run: cargo build --release --verbose --target aarch64-unknown-linux-gnu
