--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,8 +118,9 @@ jobs:
           __1
           CC=/usr/bin/clang-19
           CFLAGS=$CFLAGS
-          LDFLAGS="-L/sysroot/lib -L/sysroot/usr/lib -lc -lgcc"
           " > $GITHUB_ENV
+
+          ls /sysroot/usr/lib/aarch64-linux-gnu/Scrt1.o
 
       - name: Build
         run: cargo build --release --verbose --target aarch64-unknown-linux-gnu
