--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -120,7 +120,7 @@ jobs:
           CFLAGS=$CFLAGS
           " > $GITHUB_ENV
 
-          ls -l /sysroot/usr/lib/aarch64-linux-gnu/Scrt1.o
+          ls -l /sysroot/usr/lib/pkgconfig
 
       - name: Build
         run: cargo build --release --verbose --target aarch64-unknown-linux-gnu
