--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -120,9 +120,8 @@ jobs:
           CC=/usr/bin/clang-19
           CFLAGS=$CFLAGS
           PKG_CONFIG_SYSROOT_DIR=/sysroot/usr/lib/pkgconfig
+          LCMS2_LIB_DIR=/sysroot/usr/lib
           " > $GITHUB_ENV
-
-          tree /sysroot/usr/lib | grep lcms2
 
       - name: Build
         run: cargo build --release --verbose --target aarch64-unknown-linux-gnu
