--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,7 @@ jobs:
           sudo apt-get update
 
           # this was unreliable sometimes, so try again if it fails
-          sudo apt-get install --no-install-recommends liblcms2-dev clang-19 lld-19 clang-tools-19 clang-format-19 clang-tidy-19 || echo 'Failed. Trying again.' && sudo apt-get clean && sudo apt-get update && sudo apt-get install --no-install-recommends clang-19 lld-19 clang-tools-19 clang-format-19 clang-tidy-19
+          sudo apt-get install --no-install-recommends liblcms2-dev:arm64 clang-19 lld-19 clang-tools-19 clang-format-19 clang-tidy-19 || echo 'Failed. Trying again.' && sudo apt-get clean && sudo apt-get update && sudo apt-get install --no-install-recommends clang-19 lld-19 clang-tools-19 clang-format-19 clang-tidy-19
 
           # Fix alternatives
           (yes '' | sudo update-alternatives --force --all) > /dev/null 2> /dev/null || true
@@ -120,9 +120,10 @@ jobs:
           CC=/usr/bin/clang-19
           CFLAGS=$CFLAGS
           PKG_CONFIG_SYSROOT_DIR=/sysroot/usr/lib/pkgconfig
+          LCMS2_LIB_DIR=/sysroot/usr/lib/aarch64-linux-gnu
           " > $GITHUB_ENV
 
-          sudo find /sysroot -name "liblcms2.so*"
+          file /sysroot/usr/lib/aarch64-linux-gnu/liblcms2.so
 
       - name: Build
         run: cargo build --release --verbose --target aarch64-unknown-linux-gnu
