--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,10 +119,10 @@ jobs:
           __1
           CC=/usr/bin/clang-19
           CFLAGS=$CFLAGS
-          PKG_CONFIG_SYSROOT_DIR=/sysroot/usr/lib/pkgconfig
+          PKG_CONFIG_SYSROOT_DIR=/sysroot/usr/lib/aarch64-linux-gnu/pkgconfig
           " > $GITHUB_ENV
 
-          ls /sysroot/usr/lib
+          ls /sysroot/usr/lib/aarch64-linux-gnu
 
       - name: Build
         run: cargo build --release --verbose --target aarch64-unknown-linux-gnu
