--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
           sudo dd of=/etc/apt/trusted.gpg.d/llvm-snapshot.gpg
           sudo apt-get update
 
-          sudo apt-get install -y liblcms2-dev:aarch64-linux-gnu
+          sudo apt-get install -y liblcms2-dev
           cp -r /usr/lib/aarch64-linux-gnu/liblcms2* /sysroot/usr/lib/aarch64-linux-gnu/
           cp -r /usr/include/lcms2.h /sysroot/usr/include/
 
