--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,8 +60,6 @@ jobs:
           sudo dd of=/etc/apt/trusted.gpg.d/llvm-snapshot.gpg
           sudo apt-get update
 
-          sudo apt-get install -y liblcms2-dev
-
           # this was unreliable sometimes, so try again if it fails
           sudo apt-get install --no-install-recommends clang-19 lld-19 clang-tools-19 clang-format-19 clang-tidy-19 || echo 'Failed. Trying again.' && sudo apt-get clean && sudo apt-get update && sudo apt-get install --no-install-recommends clang-19 lld-19 clang-tools-19 clang-format-19 clang-tidy-19
 
@@ -80,8 +78,8 @@ jobs:
 
           echo "Done."
 
-          cp -r /usr/lib/aarch64-linux-gnu/liblcms2* /sysroot/usr/lib/aarch64-linux-gnu/
-          cp -r /usr/include/lcms2.h /sysroot/usr/include/
+          sudo cp -r /usr/lib/aarch64-linux-gnu/liblcms2* /sysroot/usr/lib/aarch64-linux-gnu/
+          sudo cp -r /usr/include/lcms2.h /sysroot/usr/include/
 
           # Configure the build environment. Both Rust and Clang will produce
           # llvm bitcode only, so we can use lld's incremental LTO support.
