--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
           key: ${{ runner.os }}-ubuntu-22.04-arm-normal-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Build
-        run: cargo build --release --verbose --target aarch64-unknown-linux-gnu
+        run: cargo build --release --locked --all-targets --verbose
 
   build-on-ubuntu-22-arm:
     runs-on: ubuntu-22.04-arm
@@ -125,4 +125,4 @@ jobs:
           " > $GITHUB_ENV
 
       - name: Build
-        run: cargo build --release --verbose --target aarch64-unknown-linux-gnu
+        run: cargo build --release --locked --all-targets --verbose
