--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,12 +73,11 @@ jobs:
           sudo mount --rbind /dev /sysroot/dev
           sudo mount --rbind /sys /sysroot/sys
           sudo mount --rbind /home /sysroot/home
+          sudo mount --rbind /usr/lib /sysroot/usr/lib
           sudo mount -t proc /proc /sysroot/proc
           cd
 
           echo "Done."
-
-          sudo cp -r /usr/lib/aarch64-linux-gnu/liblcms2* /sysroot/usr/lib/aarch64-linux-gnu/
 
           # Configure the build environment. Both Rust and Clang will produce
           # llvm bitcode only, so we can use lld's incremental LTO support.
