--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -121,7 +121,10 @@ jobs:
           CFLAGS=$CFLAGS
           " > $GITHUB_ENV
 
-      - name: Build
+      - name: Build with PKG_CONFIG_LIBDIR environment variable
         run: cargo build --release --locked --all-targets --verbose
         env:
           PKG_CONFIG_LIBDIR: /sysroot/usr/lib/aarch64-linux-gnu/pkgconfig
+
+      - name: Build without PKG_CONFIG_LIBDIR environment variable
+        run: cargo build --release --locked --all-targets --verbose
