--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,9 +24,6 @@ jobs:
       - name: Build
         run: cargo build --release --locked --all-targets
 
-      - name: Test
-        run: cargo test -- --nocapture
-
   build-on-ubuntu-22-x86:
     runs-on: macos-13
     steps:
@@ -154,6 +151,8 @@ jobs:
 
       - name: Test
         run: cargo test -- --nocapture
+        env:
+          PKG_CONFIG_LIBDIR: /sysroot/usr/lib/aarch64-linux-gnu/pkgconfig
 
       - name: Build without PKG_CONFIG_LIBDIR environment variable
         run: cargo build --release --locked --all-targets
