--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,3 @@
-# build rust binary for aarch64-unknown-linux-gnu
 name: Build
 on:
   workflow_dispatch:
@@ -44,9 +43,6 @@ jobs:
       - name: Build
         run: cargo build --release --locked --all-targets
 
-      - name: Test
-        run: cargo test -- --nocapture
-
   build-on-macos-arm64:
     runs-on: macos-14
     steps:
@@ -67,10 +63,7 @@ jobs:
       - name: Build
         run: cargo build --release --locked --all-targets
 
-      - name: Test
-        run: cargo test -- --nocapture
-
-  build-on-ubuntu-22-arm:
+  build-on-ubuntu-22-arm-sysroot:
     runs-on: ubuntu-22.04-arm
     steps:
       - name: Checkout
@@ -85,7 +78,7 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: ${{ runner.os }}-ubuntu-22.04-arm-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ runner.os }}-ubuntu-22.04-arm-sysroot-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       # https://github.com/denoland/deno/blob/a82326d029042aafc0e192b7593a02943ad829c3/.github/workflows/ci.generate.ts#L82
       - name: Set up incremental LTO and sysroot build
@@ -169,11 +162,6 @@ jobs:
 
       - name: Build with PKG_CONFIG_LIBDIR environment variable
         run: cargo build --release --locked --all-targets
-        env:
-          PKG_CONFIG_LIBDIR: /sysroot/usr/lib/aarch64-linux-gnu/pkgconfig
-
-      - name: Test
-        run: cargo test -- --nocapture
         env:
           PKG_CONFIG_LIBDIR: /sysroot/usr/lib/aarch64-linux-gnu/pkgconfig
 
