--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,65 +3,65 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-on-ubuntu-22-arm-normal:
-    runs-on: ubuntu-22.04-arm
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  # build-on-ubuntu-22-arm-normal:
+  #   runs-on: ubuntu-22.04-arm
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
 
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-ubuntu-22.04-arm-normal-cargo-${{ hashFiles('**/Cargo.lock') }}
+  #     - name: Cache cargo registry
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: |
+  #           ~/.cargo/bin/
+  #           ~/.cargo/registry/index/
+  #           ~/.cargo/registry/cache/
+  #           ~/.cargo/git/db/
+  #           target/
+  #         key: ${{ runner.os }}-ubuntu-22.04-arm-normal-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Build
-        run: cargo build --release --locked --all-targets
+  #     - name: Build
+  #       run: cargo build --release --locked --all-targets
 
-  build-on-macos-x86:
-    runs-on: macos-13
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  # build-on-macos-x86:
+  #   runs-on: macos-13
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
 
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-macos-x86-cargo-${{ hashFiles('**/Cargo.lock') }}
+  #     - name: Cache cargo registry
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: |
+  #           ~/.cargo/bin/
+  #           ~/.cargo/registry/index/
+  #           ~/.cargo/registry/cache/
+  #           ~/.cargo/git/db/
+  #           target/
+  #         key: ${{ runner.os }}-macos-x86-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Build
-        run: cargo build --release --locked --all-targets
+  #     - name: Build
+  #       run: cargo build --release --locked --all-targets
 
-  build-on-macos-arm64:
-    runs-on: macos-14
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  # build-on-macos-arm64:
+  #   runs-on: macos-14
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
 
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-macos-arm64-cargo-${{ hashFiles('**/Cargo.lock') }}
+  #     - name: Cache cargo registry
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: |
+  #           ~/.cargo/bin/
+  #           ~/.cargo/registry/index/
+  #           ~/.cargo/registry/cache/
+  #           ~/.cargo/git/db/
+  #           target/
+  #         key: ${{ runner.os }}-macos-arm64-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Build
-        run: cargo build --release --locked --all-targets
+  #     - name: Build
+  #       run: cargo build --release --locked --all-targets
 
   build-on-ubuntu-22-arm-sysroot:
     runs-on: ubuntu-22.04-arm
@@ -160,10 +160,10 @@ jobs:
           CFLAGS=$CFLAGS
           " > $GITHUB_ENV
 
-      - name: Build with PKG_CONFIG_LIBDIR environment variable
-        run: cargo build --release --locked --all-targets
-        env:
-          PKG_CONFIG_LIBDIR: /sysroot/usr/lib/aarch64-linux-gnu/pkgconfig
+      # - name: Build with PKG_CONFIG_LIBDIR environment variable
+      #   run: cargo build --release --locked --all-targets
+      #   env:
+      #     PKG_CONFIG_LIBDIR: /sysroot/usr/lib/aarch64-linux-gnu/pkgconfig
 
       - name: Build without PKG_CONFIG_LIBDIR environment variable
         run: cargo build --release --locked --all-targets
