--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ build = "build.rs"
 [dependencies]
 lcms2 = "6.1.0"
 
-[target.'cfg(target_os = "macos")'.dev-dependencies]
-pkg-config = "0.3.31"
+[patch.crates-io]
+rand = { git = 'https://github.com/Hajime-san/rust-lcms2-sys', branch = 'patched' }
